Clean 1 test (2 remaining).
Signed-off-by: Anne Tilloy <anne.tilloy@rte-france.com>